[project]
name = "mochi-health"
version = "0.1.0"
description = "mochi health application. Plotly/Streamlit frontend with a google sheets (!) backend"
authors = [
    {name = "Daniel Becerra"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "st-gsheets-connection (>=0.1.0,<0.2.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
